[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/silent_wolf/Auth/Login.gd" type="Script" id=1]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 23.0
content_margin_right = 23.0
content_margin_top = 23.0
content_margin_bottom = 23.0
bg_color = Color( 0.831373, 0.415686, 0.415686, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 23.0
content_margin_right = 23.0
content_margin_top = 23.0
content_margin_bottom = 23.0
bg_color = Color( 0.831373, 0.415686, 0.415686, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 23.0
content_margin_right = 23.0
content_margin_top = 23.0
content_margin_bottom = 23.0
bg_color = Color( 0.482353, 0.458824, 0.458824, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_right = 328.0
margin_bottom = 118.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "‚Üê Back"

[node name="FormContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 124.098
margin_top = 28.6379
margin_right = 124.098
margin_bottom = 243.638
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FormContainer"]
margin_right = 1024.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 5 )
text = "Log in"
align = 1

[node name="UsernameContainer" type="HBoxContainer" parent="FormContainer"]
margin_top = 172.0
margin_right = 1024.0
margin_bottom = 247.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="FormContainer/UsernameContainer"]
margin_top = 10.0
margin_right = 269.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Username:"

[node name="Username" type="LineEdit" parent="FormContainer/UsernameContainer"]
margin_left = 289.0
margin_right = 619.0
margin_bottom = 75.0
rect_min_size = Vector2( 330, 75 )
custom_fonts/font = SubResource( 7 )
max_length = 30
caret_blink = true
caret_blink_speed = 0.5

[node name="UsernameContainer2" type="HBoxContainer" parent="FormContainer"]
margin_top = 347.0
margin_right = 1024.0
margin_bottom = 422.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="FormContainer/UsernameContainer2"]
margin_top = 10.0
margin_right = 149.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Email:"

[node name="Username" type="LineEdit" parent="FormContainer/UsernameContainer2"]
margin_left = 169.0
margin_right = 499.0
margin_bottom = 75.0
rect_min_size = Vector2( 330, 75 )
custom_fonts/font = SubResource( 7 )
max_length = 30
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordContainer" type="HBoxContainer" parent="FormContainer"]
margin_top = 522.0
margin_right = 1024.0
margin_bottom = 597.0
custom_constants/separation = 40

[node name="Label" type="Label" parent="FormContainer/PasswordContainer"]
margin_top = 10.0
margin_right = 247.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Password:"

[node name="Password" type="LineEdit" parent="FormContainer/PasswordContainer"]
margin_left = 287.0
margin_right = 617.0
margin_bottom = 75.0
rect_min_size = Vector2( 330, 75 )
custom_fonts/font = SubResource( 8 )
max_length = 30
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ErrorMessage" type="Label" parent="FormContainer"]
visible = false
margin_top = 522.0
margin_right = 648.0
margin_bottom = 536.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.866667, 0.101961, 0.101961, 1 )
autowrap = true

[node name="LoginButton" parent="FormContainer" instance=ExtResource( 2 )]
margin_top = 697.0
margin_right = 1024.0
margin_bottom = 815.0
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="FormContainer"]
visible = false
margin_top = 740.0
margin_right = 648.0
margin_bottom = 812.0
custom_fonts/font = SubResource( 5 )
text = "Processing..."
align = 1
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="FormContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
